Ajout de SearchableComboBox

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -6,6 +6,6 @@
   app.author=G12345
 
 #DataBase description
-  db.url=data/sqlite/demo.db
+  db.url=data/sqlite/stibride.db
   db.user=
   db.password=
