--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>g54895.atl.stibride.main.Main</mainClass>
+                    <mainClass>stibride.main.Main</mainClass>
                 </configuration>
                 <executions>
                     <execution>
