Change app.author field value

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -3,7 +3,7 @@
 #Application description
   app.name=GRADE_ESI
   app.version=1.0
-  app.author=G12345
+  app.author=ayoub_lahyaoui
 
 #DataBase description
   db.url=data/sqlite/stibride.db
